assignment3/target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Array'", "'In'", "'Int'", "'Float'", "'Boolean'", 
                     "'String'", "'Return'", "'Null'", "'Class'", "'Val'", 
                     "'Var'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "'Self'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'='", "'!='", "'>'", 
                     "'<'", "'>='", "'<='", "'==.'", "'+.'", "'::'", "'('", 
                     "')'", "'['", "']'", "'.'", "'..'", "','", "':'", "';'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", 
                      "IN", "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", 
                      "NULL", "CLASS", "VAL", "VAR", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "SELF", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "NOT", "AND", "OR", "EQUAL", "ASSIGN", "NEQ", "GT", 
                      "LT", "GTE", "LTE", "EQUALSTR", "ADDSTR", "DOUBLECOLON", 
                      "LP", "RP", "LSB", "RSB", "DOT", "DOUBLEDOT", "COMMA", 
                      "COLON", "SEMICOLON", "LCB", "RCB", "ZEROINT", "NONZEROINT", 
                      "FLOATLIT", "ID", "DOLLARID", "WS", "ERROR_TOKEN", 
                      "STRINGLIT", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_classdecls = 1
    RULE_classdecl = 2
    RULE_memberlist = 3
    RULE_member = 4
    RULE_attribute = 5
    RULE_mu_attribute = 6
    RULE_im_attribute = 7
    RULE_att_names = 8
    RULE_att_id = 9
    RULE_method = 10
    RULE_regularmethod = 11
    RULE_specialmethod = 12
    RULE_constructor = 13
    RULE_destructor = 14
    RULE_paramlist = 15
    RULE_paramdecl = 16
    RULE_idlist = 17
    RULE_typ = 18
    RULE_arraytype = 19
    RULE_objectcreation = 20
    RULE_expr = 21
    RULE_expr1 = 22
    RULE_expr2 = 23
    RULE_expr3 = 24
    RULE_expr4 = 25
    RULE_expr5 = 26
    RULE_expr6 = 27
    RULE_expr7 = 28
    RULE_expr8 = 29
    RULE_expr9 = 30
    RULE_expr10 = 31
    RULE_expr11 = 32
    RULE_literal = 33
    RULE_exprlist = 34
    RULE_statement = 35
    RULE_statementlist = 36
    RULE_vardecl = 37
    RULE_constdecl = 38
    RULE_varnames = 39
    RULE_assignmentstm = 40
    RULE_indexopr = 41
    RULE_ifstm = 42
    RULE_else_stms = 43
    RULE_elseif_stm = 44
    RULE_else_stm = 45
    RULE_foreachstm = 46
    RULE_breakstm = 47
    RULE_continuestm = 48
    RULE_returnstm = 49
    RULE_methodinvostm = 50
    RULE_insmethodstm = 51
    RULE_stamethodstm = 52
    RULE_blockstm = 53
    RULE_intlit = 54
    RULE_booleanlit = 55
    RULE_arraylit = 56
    RULE_idxarray = 57
    RULE_idxarraycontent = 58
    RULE_intarr = 59
    RULE_floatarr = 60
    RULE_stringarr = 61
    RULE_boolarr = 62
    RULE_mularray = 63
    RULE_mularraycontent = 64

    ruleNames =  [ "program", "classdecls", "classdecl", "memberlist", "member", 
                   "attribute", "mu_attribute", "im_attribute", "att_names", 
                   "att_id", "method", "regularmethod", "specialmethod", 
                   "constructor", "destructor", "paramlist", "paramdecl", 
                   "idlist", "typ", "arraytype", "objectcreation", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "expr8", "expr9", "expr10", "expr11", "literal", 
                   "exprlist", "statement", "statementlist", "vardecl", 
                   "constdecl", "varnames", "assignmentstm", "indexopr", 
                   "ifstm", "else_stms", "elseif_stm", "else_stm", "foreachstm", 
                   "breakstm", "continuestm", "returnstm", "methodinvostm", 
                   "insmethodstm", "stamethodstm", "blockstm", "intlit", 
                   "booleanlit", "arraylit", "idxarray", "idxarraycontent", 
                   "intarr", "floatarr", "stringarr", "boolarr", "mularray", 
                   "mularraycontent" ]

    EOF = Token.EOF
    COMMENT=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSEIF=5
    ELSE=6
    FOREACH=7
    TRUE=8
    FALSE=9
    ARRAY=10
    IN=11
    INT=12
    FLOAT=13
    BOOLEAN=14
    STRING=15
    RETURN=16
    NULL=17
    CLASS=18
    VAL=19
    VAR=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    NEW=23
    BY=24
    SELF=25
    ADD=26
    SUB=27
    MUL=28
    DIV=29
    MOD=30
    NOT=31
    AND=32
    OR=33
    EQUAL=34
    ASSIGN=35
    NEQ=36
    GT=37
    LT=38
    GTE=39
    LTE=40
    EQUALSTR=41
    ADDSTR=42
    DOUBLECOLON=43
    LP=44
    RP=45
    LSB=46
    RSB=47
    DOT=48
    DOUBLEDOT=49
    COMMA=50
    COLON=51
    SEMICOLON=52
    LCB=53
    RCB=54
    ZEROINT=55
    NONZEROINT=56
    FLOATLIT=57
    ID=58
    DOLLARID=59
    WS=60
    ERROR_TOKEN=61
    STRINGLIT=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecls(self):
            return self.getTypedRuleContext(D96Parser.ClassdeclsContext,0)


        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.classdecls()
            self.state = 131
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classdecl(self):
            return self.getTypedRuleContext(D96Parser.ClassdeclContext,0)


        def classdecls(self):
            return self.getTypedRuleContext(D96Parser.ClassdeclsContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecls" ):
                return visitor.visitClassdecls(self)
            else:
                return visitor.visitChildren(self)




    def classdecls(self):

        localctx = D96Parser.ClassdeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecls)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.classdecl()
                self.state = 134
                self.classdecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.classdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LCB(self):
            return self.getToken(D96Parser.LCB, 0)

        def RCB(self):
            return self.getToken(D96Parser.RCB, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def memberlist(self):
            return self.getTypedRuleContext(D96Parser.MemberlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = D96Parser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(D96Parser.CLASS)
            self.state = 140
            self.match(D96Parser.ID)
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COLON]:
                self.state = 141
                self.match(D96Parser.COLON)
                self.state = 142
                self.match(D96Parser.ID)
                pass
            elif token in [D96Parser.LCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 146
            self.match(D96Parser.LCB)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR, D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.state = 147
                self.memberlist()
                pass
            elif token in [D96Parser.RCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 151
            self.match(D96Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self):
            return self.getTypedRuleContext(D96Parser.MemberContext,0)


        def memberlist(self):
            return self.getTypedRuleContext(D96Parser.MemberlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_memberlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberlist" ):
                return visitor.visitMemberlist(self)
            else:
                return visitor.visitChildren(self)




    def memberlist(self):

        localctx = D96Parser.MemberlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_memberlist)
        try:
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.member()
                self.state = 154
                self.memberlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.member()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attribute(self):
            return self.getTypedRuleContext(D96Parser.AttributeContext,0)


        def method(self):
            return self.getTypedRuleContext(D96Parser.MethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_member

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = D96Parser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_member)
        try:
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 159
                self.attribute()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.method()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mu_attribute(self):
            return self.getTypedRuleContext(D96Parser.Mu_attributeContext,0)


        def im_attribute(self):
            return self.getTypedRuleContext(D96Parser.Im_attributeContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = D96Parser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attribute)
        try:
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.mu_attribute()
                pass
            elif token in [D96Parser.VAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.im_attribute()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mu_attributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def SEMICOLON(self):
            return self.getToken(D96Parser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def exprlist(self):
            return self.getTypedRuleContext(D96Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mu_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMu_attribute" ):
                return visitor.visitMu_attribute(self)
            else:
                return visitor.visitChildren(self)




    def mu_attribute(self):

        localctx = D96Parser.Mu_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mu_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(D96Parser.VAR)
            self.state = 168
            self.att_names()
            self.state = 169
            self.match(D96Parser.COLON)
            self.state = 170
            self.typ()
            self.state = 174
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ASSIGN]:
                self.state = 171
                self.match(D96Parser.ASSIGN)
                self.state = 172
                self.exprlist()
                pass
            elif token in [D96Parser.SEMICOLON]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 176
            self.match(D96Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Im_attributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def SEMICOLON(self):
            return self.getToken(D96Parser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def exprlist(self):
            return self.getTypedRuleContext(D96Parser.ExprlistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_im_attribute

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIm_attribute" ):
                return visitor.visitIm_attribute(self)
            else:
                return visitor.visitChildren(self)




    def im_attribute(self):

        localctx = D96Parser.Im_attributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_im_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(D96Parser.VAL)
            self.state = 179
            self.att_names()
            self.state = 180
            self.match(D96Parser.COLON)
            self.state = 181
            self.typ()
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ASSIGN]:
                self.state = 182
                self.match(D96Parser.ASSIGN)
                self.state = 183
                self.exprlist()
                pass
            elif token in [D96Parser.SEMICOLON]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 187
            self.match(D96Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_namesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def att_id(self):
            return self.getTypedRuleContext(D96Parser.Att_idContext,0)


        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def att_names(self):
            return self.getTypedRuleContext(D96Parser.Att_namesContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_att_names

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_names" ):
                return visitor.visitAtt_names(self)
            else:
                return visitor.visitChildren(self)




    def att_names(self):

        localctx = D96Parser.Att_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_att_names)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.att_id()
                self.state = 190
                self.match(D96Parser.COMMA)
                self.state = 191
                self.att_names()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.att_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Att_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_att_id

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtt_id" ):
                return visitor.visitAtt_id(self)
            else:
                return visitor.visitChildren(self)




    def att_id(self):

        localctx = D96Parser.Att_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_att_id)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            _la = self._input.LA(1)
            if not(_la==D96Parser.ID or _la==D96Parser.DOLLARID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regularmethod(self):
            return self.getTypedRuleContext(D96Parser.RegularmethodContext,0)


        def specialmethod(self):
            return self.getTypedRuleContext(D96Parser.SpecialmethodContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_method

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):
